@@ -1,3 +1,14 @@
+2017-08-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/81698
+	* stmt.c (emit_case_dispatch_table): Add DEFAULT_EDGE argument,
+	instead of computing it in the function.  Formatting fix.
+	(expand_case): Don't rely on default_edge being the first edge,
+	clear it if removing it, pass default_edge to
+	emit_case_dispatch_table.
+	(expand_sjlj_dispatch_table): Pass NULL as DEFAULT_EDGE, formatting
+	fix.
+
 2017-08-06  Uros Bizjak  <ubizjak@gmail.com>
 
 	* config/alpha/alpha.c (alpha_reorg): If trap is the last active
